Bug 16311. Instead of using geometric scanning to find the ends of lines, just look at the frame hierarchy. patch by uriber, r+sr=roc